--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "jest --watch --coverage"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
